--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@khaledz370/slider-react-native",
   "version": "0.0.0",
   "description": "simple customizable slider",
-  "main": "src/index.js",
+  "main": "src/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
